--- a/novice/capstones/deseq_capstone/analysis.Rmd
+++ b/novice/capstones/deseq_capstone/analysis.Rmd
@@ -67,9 +67,10 @@ Find the gene with the highest expression in any sample. Extract the expression 
 What is the function of the gene? Can you suggest why this is the top expressed gene?
 
 Hint 1: use the `apply` function from the introductory R lessons.
+
 Hint 2: try `?which.max`.
 
-```{r exercise_1, echo=FALSE}
+```{r exercise_1, echo=FALSE, include=FALSE}
 max(apply(countData, 1, max)) # max expression is 7013
 topGene <- which.max(apply(countData, 1, max)) # gene is EEF1A1P9
 countData[topGene, ] # get other sample data - max is in uvb1
@@ -116,13 +117,13 @@ How could you make this plot more informative and look more professional?
 
 Hint: try using a log scale. You can also changing colours, transparencies, sizes, or shapes of points. 
 
-`help(par)` will give you information on lots of graphical parameters that can be set. Help for ggplot2 can be found [here](http://docs.ggplot2.org/current/).
+`?par` will give you information on lots of graphical parameters that can be set. Help for ggplot2 can be found [here](http://docs.ggplot2.org/current/).
 
-```{r exercise2_1, echo=FALSE}
+```{r exercise2_1, echo=FALSE, include=FALSE}
 plot(countData2$ctlMean, countData2$uvbMean, log="xy", pch=16)
 ```
 
-```{r exercise2_2, echo=FALSE}
+```{r exercise2_2, echo=FALSE, include=FALSE}
 ggplot(countData2, aes(x=ctlMean, y=uvbMean)) + geom_point() + scale_x_log10() + scale_y_log10() + theme_bw()
 ```
 There are lots more options you can use to alter the appearance of these plots.
